# gitsap

./: .editorconfig  .env  .env.dev  .env.dist  .gitignore  .pre-commit-config.yaml  LICENSE.md  Procfile  Procfile.dev  README.md  go.mod  guitar.go  index.html  jsconfig.json  manage.py  minio-sample-policy.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.js
.github/workflows/: deploy.yaml
accounts/: admin.py  forms.py  models.py  tasks.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_avatar.py
config/: asgi.py  celery.py  middleware.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
docs/: index.md
docs/.vitepress/: config.mjs
docs/guide/: architecture.md  developing.md  setup.md
git/: apps.py  service.py  views.py
gitsap/: apps.py  asgi.py  celery.py  mixins.py  relay_urls.py  settings.py  signals.py  urls.py  wsgi.py
gitsap/accounts/: admin.py  apps.py  forms.py  models.py  tasks.py  views.py
gitsap/attachments/: apps.py  models.py  views.py
gitsap/base/: apps.py  models.py  responses.py
gitsap/comments/: apps.py
gitsap/core/: apps.py  models.py
gitsap/cycles/: apps.py
gitsap/documents/: apps.py
gitsap/git/: apps.py  core.py  (+4 more)
home/: views.py
issues/: apps.py  forms.py  models.py  signals.py  views.py
projects/: mixins.py  models.py  signals.py  views.py
pull_requests/: apps.py  forms.py  models.py  signals.py  views.py
requirements/: dev.txt  prod.txt
scripts/: check_commit_msg.sh
scss/: main.scss
shared/: models.py
(+252 files in other folders)
