[project]
name = "gitsap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.17",
    "celery>=5.5.3",
    "django>=5.2.5",
    "djangorestframework>=3.16.1",
    "pygit2>=1.18.2",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
