[project]
name = "gitsap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.3",
    "httpx>=0.28.1",
    "psycopg>=3.3.3",
    "pygit2>=1.19.2",
    "python-dotenv>=1.2.2",
    "python-ulid>=3.1.0",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
